// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Input Default 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r16:"
  >
    Input Label 
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":r16:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":r16:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
      id=":r16:"
      onChange={[Function]}
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Disabled 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r18:"
  >
    Input Label 
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":r18:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":r18:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
      disabled={true}
      id=":r18:"
      onChange={[Function]}
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Error 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r17:"
  >
    Input Label 
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":r17:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":r17:-description"
      aria-errormessage="Field Required"
      aria-invalid={true}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-error focus:border-error"
      id=":r17:"
      onChange={[Function]}
      placeholder="Input placeholder"
      type="text"
    />
  </div>
  <div
    className="flex w-full items-center gap-3 mt-2"
  >
    <div
      style={
        Object {
          "height": undefined,
          "width": 20,
        }
      }
    />
    <span
      className="w-full text-left text-error text-body-500"
      data-testid="txt"
    >
      Field Required
    </span>
  </div>
</div>
`;
